<resources>
    <string name="app_name">OsmDroidEX2</string>
    <string name="Destinazione">Destinazione</string>
    <string name="Partenza">Partenza</string>
    <string name="Location">Location</string>
    <string name="Position">Position</string>
    <string name="GeoLocation">Geolocation</string>
    <string name="Bluethoot">Bluethoot</string>
    <string name="Notification">Send Notification</string>
    <string name="Version">App Version</string>
    <string name="True">True</string>
    <string name="False">False</string>
    <string name="Default">----</string>

    <string name="blank"></string>
    <string name="u14">u14</string>
    <string name="u6">u6</string>
    <string name="posizioneAttuale">Posizione Attuale</string>
    <string name="u7">u7</string>
    <string name="u14AulaFirstFloor">u14AulaFirstFloor</string>
    <string name="u14AulaSecondFloor">u14AulaSecondFloor</string>
    <string name="u6AulaFirstFloor">u6AulaFirstFloor</string>

    <string name="ArrivalPoint">ArrivalPoint</string>
    <string name="PathOptions">PathOptions</string>
    <string name="ShowPath">Show Path</string>
    <string name="SHOWSTEPS">SHOW STEPS</string>
    <string name="Start">Start</string>
    <string name="Franco">Utente</string>

    <string name="Step">Steps:</string>
    <string name="AnsiaSociale">Ansia Sociale</string>
    <string name="Carrozina">Carrozina</string>
    <string name="Claustrofobia">Claustrofobia</string>
    <string name="Bicicletta">Bicicletta</string>
    <string name="Macchina">Macchina</string>
    <string name="Piedi">Piedi</string>
    <string name="SendaProblem">Send a Problem</string>

    <string name="Latitude">Latitude</string>
    <string name="Longitude">Longitude</string>
    <string name="ZeroPointZero">0.0</string>
    <string name="Go">Go</string>
    <string name="Cancel">Cancel</string>
    <string name="AvoidStaircase">Avoid Staircase</string>
    <string name="AvoidUnavailablePaths">Avoid Unavailable Paths</string>
    <string name="AvoidCrowdedPaths">Avoid Crowded Paths</string>

    <string name="StartingPoint">StartingPoint</string>

</resources>