<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent" android:orientation="horizontal"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Latitude"/>
        <EditText
            android:hint="@string/ZeroPointZero"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal|numberSigned"
            android:id="@+id/latlonPicker_latitude"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent" android:orientation="horizontal"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Longitude"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/ZeroPointZero"
            android:inputType="numberDecimal|numberSigned"
            android:id="@+id/latlonPicker_longitude"/>
    </LinearLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" android:id="@+id/latlonPicker_ok" android:text="@string/Go"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" android:id="@+id/latlonPicker_cancel" android:text="@string/Cancel"/>

</LinearLayout>